Fixed overflow on the mobile menu

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -24,7 +24,7 @@
   }
   to {
     width: clamp(300px, 100%, 600px);
-    height: 100%;
+    height: calc(100% - var(--navbar-height));
     background-color: rgba(238, 130, 238, 30%);
     border-left: solid 1px rgba(245, 245, 245, 100%);
   }
@@ -33,6 +33,7 @@
 @keyframes collapse {
   from {
     width: clamp(300px, 100%, 600px);
+    height: calc(100% - var(--navbar-height));
     background-color: rgba(238, 130, 238, 30%);
     border-left: solid 1px rgba(245, 245, 245, 100%);
     display: block;
@@ -69,7 +70,6 @@
   justify-content: center;
   position: absolute;
   height: calc(100% - var(--navbar-height));
-  width: 100%;
   right: 0;
   top: var(--navbar-height);
 }
@@ -101,7 +101,7 @@
 }
 
 .mobile-page-links a {
- white-space: nowrap;
+  white-space: nowrap;
 }
 
 @media (min-width: 800px) {
